[package]
name = "i-hate-miners-rage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde_json = "1.0.128"
serde = {version="1.0.210", features=["derive"]}
reqwest = {version="0.12.8", features=["blocking","json"]}
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
